# bonfire-math

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
math/: CMakeLists.txt
math/include/math/: config.hpp  face.hpp  matrix3.hpp  matrix4.hpp  print_helpers.hpp  projection.hpp  transformation.hpp  vector2.hpp  vector3.hpp  vector4.hpp
software_renderer/: CMakeLists.txt  main.cpp
software_renderer/assets/: swr_config.hpp.in
software_renderer/core/: canvas.hpp  components.hpp  context.hpp  entity.hpp  pods.hpp  renderer.hpp  utils.hpp
test/: CMakeLists.txt
test/math/: matrix3.cpp  matrix3_tests.cpp  matrix4_tests.cpp  vector3.cpp
